--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://color-analysis.pro">
+    <meta property="og:url" content="https://color-analysis-quiz.org">
     <meta property="og:title" content="Color Analysis Pro | AI-Powered Seasonal Color Analysis">
     <meta property="og:description" content="Discover your perfect seasonal color palette with our AI-powered color analysis. Find out if you're a Spring, Summer, Autumn, or Winter and get personalized color recommendations.">
     <meta property="og:image" content="/lovable-uploads/og-image.png">
@@ -282,12 +282,12 @@
         "@type": "WebPage",
         "name": "Color Analysis Pro | AI-Powered Seasonal Color Analysis",
         "description": "Discover your perfect seasonal color palette with our AI-powered color analysis. Find out if you're a Spring, Summer, Autumn, or Winter and get personalized color recommendations.",
-        "url": "https://color-analysis.pro/",
+        "url": "https://color-analysis-quiz.org/",
         "inLanguage": "en",
         "isPartOf": {
             "@type": "WebSite",
             "name": "Color Analysis Pro",
-            "url": "https://color-analysis.pro"
+            "url": "https://color-analysis-quiz.org"
         }
     }
     </script>
